--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/microsoft_logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/microsoft_logo.png" type="image/x-icon">
     <title>Microsoft - Cloud, Computers, Apps &amp; Gaming</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -17,12 +17,12 @@
                 <div class="line h-0.5 w-6 my-1 bg-black"></div>
             </div>
             <div class="lg:hidden">
-                <img src="/assets/search.png" alt="search" class="w-4">
+                <img src="assets/search.png" alt="search" class="w-4">
             </div>
         </div>
         <div class="logo text-center flex lg:order-1">
             <div class="p-4">
-                <img src="/assets/mslogo.png" alt="MS logo" class="w-28">
+                <img src="assets/mslogo.png" alt="MS logo" class="w-28">
             </div>
             <div
                 class="features hidden lg:static lg:flex lg:items-center lg:mx-8 lg:space-x-5  lg:w-auto lg:bg-white lg:translate-x-0 lg:translate-y-0">
@@ -38,16 +38,16 @@
             <div class="search lg:block xl:flex">
                 <p class="hidden xl:block xl:mr-2 hover:cursor-pointer hover:underline-offset-4 hover:underline">Search
                 </p>
-                <img src="/assets/search.png" alt="search" class="hidden lg:block lg:w-4 xl:w-6  hover:cursor-pointer">
+                <img src="assets/search.png" alt="search" class="hidden lg:block lg:w-4 xl:w-6  hover:cursor-pointer">
             </div>
             <div class="cart lg:block xl:flex">
                 <p class=" hidden xl:block xl:mr-2 hover:cursor-pointer hover:underline-offset-4 hover:underline">Cart
                 </p>
-                <img src="/assets//cart.jpeg" alt="cart" class="w-5 hover:cursor-pointer">
+                <img src="assets//cart.jpeg" alt="cart" class="w-5 hover:cursor-pointer">
             </div>
             <div class="user lg:block xl:flex">
                 <p class=" hidden xl:block xl:mr-2">Sign in</p>
-                <img src="/assets/user.png" alt="user" class="w-6 hover:cursor-pointer">
+                <img src="assets/user.png" alt="user" class="w-6 hover:cursor-pointer">
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="main flex flex-col items-center mx-2 border-b-2
     md:items-start  lg:bg-[#F2F2F2] lg:flex-row 2xl:mx-[5%]">
         <div class="main-img">
-            <img src="/assets/main.webp" alt="Surface-pro image">
+            <img src="assets/main.webp" alt="Surface-pro image">
         </div>
         <div class="content p-6  bg-white lg:bg-[#F2F2F2] xl:m-auto">
             <h1 class="font-semibold text-2xl lg:text-4xl mb-3 ">Surface Pro 9</h1>
@@ -69,19 +69,19 @@
     <div class="icon-section">
         <div class="icons flex flex-col items-center justify-center mt-4  md:flex-row md:flex-wrap xl:mb-12">
             <div class="icon flex flex-col items-center justify-center m-6">
-                <img src="/assets/ic-1.jpeg" alt="ic-1" class="h-10 w-10 mb-3">
+                <img src="assets/ic-1.jpeg" alt="ic-1" class="h-10 w-10 mb-3">
                 <a class="text-blue-800 underline font-semibold hover:cursor-pointer">Choose your Microsoft 365</a>
             </div>
             <div class="icon flex flex-col items-center justify-center m-6">
-                <img src="/assets/ic-2.jpeg" alt="ic-2" class="h-10 w-10 mb-3">
+                <img src="assets/ic-2.jpeg" alt="ic-2" class="h-10 w-10 mb-3">
                 <a class="text-blue-800 underline font-semibold hover:cursor-pointer">Explore Surface devices</a>
             </div>
             <div class="icon flex flex-col items-center justify-center m-6">
-                <img src="/assets/ic-3.jpeg" alt="ic-3" class="h-10 w-10 mb-3">
+                <img src="assets/ic-3.jpeg" alt="ic-3" class="h-10 w-10 mb-3">
                 <a class="text-blue-800 underline font-semibold hover:cursor-pointer">Buy Xbox games and consoles</a>
             </div>
             <div class="icon flex flex-col items-center justify-center m-6">
-                <img src="/assets/ic-1.jpeg" alt="ic-1" class="h-10 w-10 mb-3">
+                <img src="assets/ic-1.jpeg" alt="ic-1" class="h-10 w-10 mb-3">
                 <a class="text-blue-800 underline font-semibold hover:cursor-pointer">Get Windows 11</a>
             </div>
         </div>
@@ -91,7 +91,7 @@
         class="electronics flex flex-col items-center justify-center md:flex-row md:flex-wrap md:items-start lg:justify-evenly xl:px-[5%]">
         <div
             class="eitem flex flex-col justify-center items-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4 hover:cursor-pointer">
-            <img src="/assets/eimg-1.jpeg" alt="eimg-1" class="m-auto lg:h-full w-full">
+            <img src="assets/eimg-1.jpeg" alt="eimg-1" class="m-auto lg:h-full w-full">
             <div class="img-content pt-4 w-full">
                 <h1 class="text-xl font-semibold mb-2">Surface Laptop 5</h1>
                 <p>Sophisticated style and multitasking speed powered by 12th Gen Intel® Core, with Windows 11.</p>
@@ -101,7 +101,7 @@
 
         <div
             class="eitem flex flex-col items-center justify-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4 hover:cursor-pointer">
-            <img src="/assets/eimg-2.jpeg" alt="eimg-2" class="m-auto lg:h-full w-full ">
+            <img src="assets/eimg-2.jpeg" alt="eimg-2" class="m-auto lg:h-full w-full ">
             <div class="img-content pt-4 w-full">
                 <h1 class="text-xl font-semibold mb-2">Xbox Series S</h1>
                 <p> Next-gen performance in the smallest Xbox ever. </p>
@@ -112,7 +112,7 @@
 
         <div
             class="eitem flex flex-col items-center justify-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4 hover:cursor-pointer">
-            <img src="/assets/eimg-3.jpeg" alt="eimg-3" class="m-auto lg:h-full w-full">
+            <img src="assets/eimg-3.jpeg" alt="eimg-3" class="m-auto lg:h-full w-full">
             <div class="img-content pt-4 w-full">
                 <h1 class="text-xl font-semibold mb-2">
                     Announcing the next wave of AI innovation
@@ -126,7 +126,7 @@
         </div>
         <div
             class="eitem flex flex-col items-center justify-center p-3  md:max-w-[50%] lg:w-2/3 xl:w-1/4 hover:cursor-pointer">
-            <img src="/assets/eimg-4.jpeg" alt="eimg-4" class="m-auto  lg:h-full w-full">
+            <img src="assets/eimg-4.jpeg" alt="eimg-4" class="m-auto  lg:h-full w-full">
             <div class="img-content pt-4 w-full">
                 <h1 class="text-xl font-semibold mb-2">
                     Join for $1
@@ -141,7 +141,7 @@
     </div>
 
     <div class="flex flex-col items-center p-3 lg:items-start   hover:cursor-pointer">
-        <img src="/assets/pc-img.jpeg" alt="PC" class="m-auto lg:aspect-[1/0.6] xl:px-[5%] xl:aspect-auto 2xl:w-full">
+        <img src="assets/pc-img.jpeg" alt="PC" class="m-auto lg:aspect-[1/0.6] xl:px-[5%] xl:aspect-auto 2xl:w-full">
         <div class="img-content  pt-4 xl:absolute xl:text-white xl:w-1/4 xl:mx-64 xl:my-24 2xl:mx-80 2xl:my-44">
             <h1 class="text-xl font-semibold mb-2 md:text-2xl xl:text-3xl 2xl:text-6xl">
                 Designed for life today - and tomorrow
@@ -162,7 +162,7 @@
         <div
             class="flex flex-col items-center md:flex-row md:flex-wrap md:items-start lg:justify-evenly hover:cursor-pointer">
             <div class="bitem flex flex-col items-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4">
-                <img src="/assets/bimg-1.jpeg" alt="bimg-1" class="m-auto w-full h-full">
+                <img src="assets/bimg-1.jpeg" alt="bimg-1" class="m-auto w-full h-full">
                 <div class="img-content pt-4 w-full">
                     <h1 class="text-xl font-semibold mb-2">Surface for Business</h1>
                     <p>No matter what you do, there's a Surface to help you do it.</p>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="bitem flex flex-col items-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4">
-                <img src="/assets/bimg-2.jpeg" alt="bimg-2" class="m-auto w-full h-full">
+                <img src="assets/bimg-2.jpeg" alt="bimg-2" class="m-auto w-full h-full">
                 <div class="img-content pt-4 w-full">
                     <h1 class="text-xl font-semibold mb-2">Get Microsoft Teams for free</h1>
                     <p> Online meetings, chat and shared cloud storage – all in one place. </p>
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="bitem flex flex-col items-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4">
-                <img src="/assets/bimg-3.jpeg" alt="bimg-3" class="m-auto w-full h-full ">
+                <img src="assets/bimg-3.jpeg" alt="bimg-3" class="m-auto w-full h-full ">
                 <div class="img-content pt-4 w-full">
                     <h1 class="text-xl font-semibold mb-2">Thrive in a hybrid world
                     </h1>
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="bitem flex flex-col items-center p-3 md:max-w-[50%] lg:w-2/3 xl:w-1/4">
-                <img src="/assets/bimg-4.jpeg" alt="bimg-4" class="m-auto w-full h-full">
+                <img src="assets/bimg-4.jpeg" alt="bimg-4" class="m-auto w-full h-full">
                 <div class="img-content pt-4 w-full ">
                     <h1 class="text-xl font-semibold mb-2">Join the era of AI</h1>
                     <p>Create, communicate, and code with the latest Microsoft AI solutions. </p>
@@ -205,9 +205,9 @@
     </div>
     <div class="follow flex  items-center justify-start m-4 w-auto xl:px-[5%]">
         <p>Follow Microsoft</p>
-        <img src="/assets/fb.jpeg" alt="Facebook" class="h-9 cursor-pointer">
-        <img src="/assets/twitter.jpeg" alt="Facebook" class="h-9 cursor-pointer">
-        <img src="/assets/utube.jpeg" alt="Facebook" class="h-9 cursor-pointer">
+        <img src="assets/fb.jpeg" alt="Facebook" class="h-9 cursor-pointer">
+        <img src="assets/twitter.jpeg" alt="Facebook" class="h-9 cursor-pointer">
+        <img src="assets/utube.jpeg" alt="Facebook" class="h-9 cursor-pointer">
     </div>
 </body>
 
